remove fixed position of toc menu when on mobile

--- a/docroot/profiles/custom/webny/themes/custom/dfs_ny/sass/components/_toc.scss
+++ b/docroot/profiles/custom/webny/themes/custom/dfs_ny/sass/components/_toc.scss
@@ -15,10 +15,17 @@
     display: inline-block;
     max-width: 20%;
   }
+  .back-to-top {
+    padding-top: 20px;
+    padding-bottom: 30px;
+  }
   &.stuck {
-    position: fixed;
+    // override stuck so it's not fixed on mobile
+    @media (min-width: $min-mobile) {
+      position: fixed;  
+      top: 0px;
+    }
     width: 100%;
-    top: 0px;
     z-index: 100;
     .webny-action-label {
       visibility: visible;
@@ -89,8 +96,11 @@
 aside#toc-sidebar {
   position: relative;
   &.stuck {
-    position: fixed;
-    top: 50px;
+    // override stuck so it's not fixed on mobile
+    @media (min-width: $min-mobile) {
+      position: fixed;  
+      top: 50px;
+    }
     z-index: 10;
     width: 100%;
   }
@@ -445,6 +455,15 @@ aside#toc-sidebar {
 
 /* Contact Frame styling - ends here */
 
+
+// ######################################################################### //
+/* NON-MOBILE VIEW */
+
+@media (min-width: $min-mobile) {
+  .back-to-top {
+    display: none;
+  }
+}
 // ######################################################################### //
 /* MIN TABLET VIEW */
 
